@@ -1227,6 +1227,19 @@ class Ethna_ActionForm
     }
 
     /**
+     *  ユーザが動的にフォーム定義を変更したい場合に
+     *  このメソッドをオーバーライドします。
+     *  $this->backend も初期化済みのため、DBやセッション
+     *  の値に基づいてフォーム定義を変更することができます。
+     *
+     *  @access public 
+     */
+    function setFormDef_PreHelper()
+    {
+        //  TODO: override this method. 
+    }
+
+    /**
      *  ヘルパオブジェクト(アプリケーションオブジェクト)
      *  経由でのフォーム値定義を設定する
      *
