@@ -14,6 +14,9 @@
 - フォームヘルパの動作を改善
 -- 1つのテンプレートに 複数 {form} が指定されたときに、submitされたformに対してのみ補正処理が働くように改善 この場合、{form name=...} 属性の指定が必須。
 -- 1つのテンプレートに 複数 {form} が置かれた場合に、それぞれのフォームの配列を区別するようにした
+- フォーム定義を動的に変更するためのAPIを追加
+-- Ethna_ActionForm#setFormDef_PreHelper
+--- Ethna_Backend や Ethna_Session が初期化後に呼ばれる 
 
 *** bug fix
 
